Regression: AOV passes doesn´t work on eevee #98919

Closed
opened 2022-06-16 03:42:47 +02:00 by Oscar · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: (3.1)

Short description of error
When i setting up an aov pass on eevee doesn´t appear later on render pass

Exact steps for others to reproduce the error
1- Open blender
2- Create an aov pass for default cube ( doesn´t matter if is set to color or value)
3- Add an aov output node in shader editor
4- Render and check pass

File with first 3 steps included:
AOV_test.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: (3.1) **Short description of error** When i setting up an aov pass on eevee doesn´t appear later on render pass **Exact steps for others to reproduce the error** 1- Open blender 2- Create an aov pass for default cube ( doesn´t matter if is set to color or value) 3- Add an aov output node in shader editor 4- Render and check pass File with first 3 steps included: [AOV_test.blend](https://archive.blender.org/developer/F13171758/AOV_test.blend)
Author

Added subscriber: @oscarito

Added subscriber: @oscarito
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm.
Will do the bisect

Thanks for the report. I can confirm. Will do the bisect
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Broke between 0ba061c3bc9b and 48ff456a4bda
So I think responsible commit is 80859a6cb2
cc @fclem

Broke between `0ba061c3bc9b` and `48ff456a4bda` So I think responsible commit is 80859a6cb2 cc @fclem
Pratik Borhade changed title from AOV passes doesn´t work on eevee to Regression: AOV passes doesn´t work on eevee 2022-06-16 08:13:11 +02:00
Jeroen Bakker self-assigned this 2022-06-20 12:02:31 +02:00
Member

Interesting that AOV test case is working... will start a debugging session.
Ok it is working when the output is connected to an input node.
I thing that the data is read from a variable that isn't set, unless it is connected.

Closure nodetree_exec()
{
vec3 tmp1;
world_normals_get(tmp1);

vec3 tmp2;
world_normals_get(tmp2);

vec3 cons27 = vec3(0, 0, 0);
float cons29 = float(1);
float cons30 = float(0);
float cons31 = float(0);
float cons32 = float(0);
Closure tmp34;
node_bsdf_principled(node_tree.u3, node_tree.u4, node_tree.u5, node_tree.u6, node_tree.u7, node_tree.u8, node_tree.u9, node_tree.u10, node_tree.u11, node_tree.u12, node_tree.u13, node_tree.u14, node_tree.u15, node_tree.u16, node_tree.u17, node_tree.u18, node_tree.u19, node_tree.u20, node_tree.u21, node_tree.u22, node_tree.u23, node_tree.u24, tmp1, tmp2, cons27, node_tree.u28, cons29, cons30, cons31, cons32, node_tree.u33, tmp34);

Closure tmp36;
node_output_material_surface(tmp34, tmp36);

return tmp36;
}

vs

Closure nodetree_exec()
{
vec3 tmp1;
world_normals_get(tmp1);

vec3 tmp2;
world_normals_get(tmp2);

vec3 cons27 = vec3(0, 0, 0);
float cons29 = float(1);
float cons30 = float(0);
float cons31 = float(0);
float cons32 = float(0);
Closure tmp34;
node_bsdf_principled(node_tree.u3, node_tree.u4, node_tree.u5, node_tree.u6, node_tree.u7, node_tree.u8, node_tree.u9, node_tree.u10, node_tree.u11, node_tree.u12, node_tree.u13, node_tree.u14, node_tree.u15, node_tree.u16, node_tree.u17, node_tree.u18, node_tree.u19, node_tree.u20, node_tree.u21, node_tree.u22, node_tree.u23, node_tree.u24, tmp1, tmp2, cons27, node_tree.u28, cons29, cons30, cons31, cons32, node_tree.u33, tmp34);

Closure tmp36;
node_output_material_surface(tmp34, tmp36);

float cons39 = float(4.98533088e-39);
Closure tmp40;
node_output_aov(node_tree.u37, node_tree.u38, cons39, tmp40);

return tmp36;
}

It seems that the unconnected aov node is pruned when calling ntree_shader_pruned_unused. Removing this call will show the AOV correctly.

Interesting that AOV test case is working... will start a debugging session. Ok it is working when the output is connected to an input node. I thing that the data is read from a variable that isn't set, unless it is connected. ``` Closure nodetree_exec() { vec3 tmp1; world_normals_get(tmp1); vec3 tmp2; world_normals_get(tmp2); vec3 cons27 = vec3(0, 0, 0); float cons29 = float(1); float cons30 = float(0); float cons31 = float(0); float cons32 = float(0); Closure tmp34; node_bsdf_principled(node_tree.u3, node_tree.u4, node_tree.u5, node_tree.u6, node_tree.u7, node_tree.u8, node_tree.u9, node_tree.u10, node_tree.u11, node_tree.u12, node_tree.u13, node_tree.u14, node_tree.u15, node_tree.u16, node_tree.u17, node_tree.u18, node_tree.u19, node_tree.u20, node_tree.u21, node_tree.u22, node_tree.u23, node_tree.u24, tmp1, tmp2, cons27, node_tree.u28, cons29, cons30, cons31, cons32, node_tree.u33, tmp34); Closure tmp36; node_output_material_surface(tmp34, tmp36); return tmp36; } ``` vs ``` Closure nodetree_exec() { vec3 tmp1; world_normals_get(tmp1); vec3 tmp2; world_normals_get(tmp2); vec3 cons27 = vec3(0, 0, 0); float cons29 = float(1); float cons30 = float(0); float cons31 = float(0); float cons32 = float(0); Closure tmp34; node_bsdf_principled(node_tree.u3, node_tree.u4, node_tree.u5, node_tree.u6, node_tree.u7, node_tree.u8, node_tree.u9, node_tree.u10, node_tree.u11, node_tree.u12, node_tree.u13, node_tree.u14, node_tree.u15, node_tree.u16, node_tree.u17, node_tree.u18, node_tree.u19, node_tree.u20, node_tree.u21, node_tree.u22, node_tree.u23, node_tree.u24, tmp1, tmp2, cons27, node_tree.u28, cons29, cons30, cons31, cons32, node_tree.u33, tmp34); Closure tmp36; node_output_material_surface(tmp34, tmp36); float cons39 = float(4.98533088e-39); Closure tmp40; node_output_aov(node_tree.u37, node_tree.u38, cons39, tmp40); return tmp36; } ``` It seems that the unconnected aov node is pruned when calling `ntree_shader_pruned_unused`. Removing this call will show the AOV correctly.

This issue was referenced by 7ec9a02089

This issue was referenced by 7ec9a02089c116cfb0353daed4caeecb5ad4948c

This issue was referenced by 84fc086254

This issue was referenced by 84fc08625431e2cbd1c495eebed11e42cf9b6901
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98919
No description provided.